--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -13,6 +13,9 @@ jobs:
         cuda: ['10.0', '10.2', '11.0']
     steps:
     - uses: actions/checkout@v2
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+    - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
     - name: LLVM cache
