switched from tmate to ngrok

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -100,5 +100,8 @@ jobs:
         set GITHUB_WORKSPACE=%GITHUB_WORKSPACE:\=/%
         cd "%GITHUB_WORKSPACE%/build/tests-cpu"
         sycl_tests.exe
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+    - name: Start SSH session
+      uses: luchihoratiu/debug-via-ssh@main
+      with:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+        SSH_PASS: ${{ secrets.SSH_PASS }}
