used explicit path due to bug in github actions

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -75,8 +75,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: build-result
-        path: |
-          "${{github.workspace}}/install"
+        path: D:/a/hipSYCL/hipSYCL
     - name: build CPU tests
       shell: cmd
       env:
