--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -107,6 +107,6 @@ jobs:
         sycl_tests.exe
 #    - name: Start SSH session
 #      uses: luchihoratiu/debug-via-ssh@main
-      with:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-        SSH_PASS: ${{ secrets.SSH_PASS }}
+#      with:
+#        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+#        SSH_PASS: ${{ secrets.SSH_PASS }}
